--- a/server/frps.ini
+++ b/server/frps.ini
@@ -2,6 +2,7 @@
 bind_addr = 0.0.0.0
 bind_port = 7000
 kcp_bind_port = 7000
+dashboard_port = 7500
 # proxy_bind_addr = 127.0.0.1
 vhost_http_port = 80
 vhost_https_port = 443
