--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -5,9 +5,16 @@ services:
     command: /work/frp/frps -c /data/frps.ini
     ports:
       - 7000:7000
+      - 7000:7000/udp
       - 7500:7500
-      - 6000:6000
+      - "6000-6010:6000-6010"
+      - "6000-6010:6000-6010/udp"
     restart: always
     volumes:
       - ./frps.ini:/data/frps.ini
       - ./logs:/data/logs
+
+networks:
+  default:
+    external:
+      name: br0
