update to 0.15.1 version
Signed-off-by: laudukang <laudukang@gmail.com>

--- a/server/frps.ini
+++ b/server/frps.ini
@@ -1,7 +1,9 @@
 [common]
 bind_addr = 0.0.0.0
 bind_port = 7000
+bind_udp_port = 7001
 kcp_bind_port = 7000
+dashboard_addr = 0.0.0.0
 dashboard_port = 7500
 # proxy_bind_addr = 127.0.0.1
 vhost_http_port = 80
