update frp to 0.20.0

--- a/client/frpc.ini
+++ b/client/frpc.ini
@@ -11,8 +11,14 @@ login_fail_exit = true
 protocol = kcp
 
 # you may need to update follows
-privilege_token = 12345678
+token = 12345678
 admin_addr = 0.0.0.0
 admin_port = 7400
 admin_user = admin
-admin_pwd = admin
+admin_passwd = admin
+
+[ssh]
+type = tcp 
+local_ip = 127.0.0.1
+local_port = 22
+remote_port = 6000
