--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     ports:
       - 7000:7000
       - 7000:7000/udp
+      - 7001:7001/udp
       - 7500:7500
       - "6000-6010:6000-6010"
       - "6000-6010:6000-6010/udp"
