--- a/server/frps.ini
+++ b/server/frps.ini
@@ -13,7 +13,7 @@ log_file = /data/logs/frps.log
 log_level = info
 log_max_days = 30
 heartbeat_timeout = 90
-privilege_allow_ports = 6000-6010,64000-64050
+allow_ports = 6000-6010,64000-64050
 max_pool_count = 100
 authentication_timeout = 900
 tcp_mux = true
@@ -21,5 +21,5 @@ tcp_mux = true
 # you may need to update follows
 dashboard_user = admin
 dashboard_pwd = admin
-privilege_token = 12345678
+token = 12345678
 subdomain_host = frp.codz.me
